--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>groupId</groupId>
     <artifactId>portfolio-java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    
+    <modules>
+        <module>boogle-maps</module>
+        <module>cloudinterface</module>
+        <module>ecommerce</module>
+        <module>eureka</module>
+        <module>pricing-service</module>
+        <module>vehicles-api</module>
+    </modules>
+
 </project>
