--- a/cloudinterface/src/main/resources/application.properties
+++ b/cloudinterface/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.servlet.multipart.max-request-size=-1
 spring.servlet.multipart.enabled=true
 spring.application.name=cloud-service
 server.port=8081
+openApiKey=XXX-your-openAI-key
