--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -16,7 +16,9 @@
     "styled-components": "^6.0.7",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "loader-utils": "3.2.1"
+    "loader-utils": "3.2.1",
+    "axios": "^1.2.6",
+    "typescript": "4.8.3"
   },
   "scripts": {
     "start": "PORT=5001 react-scripts start",
