--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "5.1.26",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-tabs": "^6.0.2",
+    "web-vitals": "^2.1.4",
+    "styled-components": "^6.0.7",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "loader-utils": "3.2.1"
   },
   "scripts": {
     "start": "PORT=5001 react-scripts start",
