--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.2.1",
     "loader-utils": "3.2.1",
     "axios": "^1.2.6",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "recoil": "^0.3.1"
   },
   "scripts": {
     "start": "PORT=5001 react-scripts start",
