--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "5.1.26",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/styled-components": "5.1.26",
+    "axios": "^1.2.6",
+    "loader-utils": "3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-tabs": "^6.0.2",
-    "web-vitals": "^2.1.4",
-    "styled-components": "^6.0.7",
+    "react-modal": "^3.16.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "loader-utils": "3.2.1",
-    "axios": "^1.2.6",
+    "react-multi-select-component": "^4.2.9",
+    "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
+    "recoil": "^0.3.1",
+    "styled-components": "^6.0.7",
     "typescript": "4.8.3",
-    "recoil": "^0.3.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=5001 react-scripts start",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
