--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -7,15 +7,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-datepicker": "^4.15.0",
     "@types/styled-components": "5.1.26",
     "axios": "^1.2.6",
     "loader-utils": "3.2.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-multi-select-component": "^4.2.9",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-multi-select-component": "^4.2.9",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
     "recoil": "^0.3.1",
