--- a/ml-pipeline/requirements.txt
+++ b/ml-pipeline/requirements.txt
@@ -2,6 +2,7 @@ pandas==2.1.3
 scikit-learn==1.3.2
 requests==2.31.0
 flask==3.0.0
+flask-cors==4.0.0
 reportlab==4.0.7
 seabird==0.12.0
 seaborn==0.13.0
