--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-multi-select-component": "^4.2.9",
+    "react-pdf": "^7.5.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
