--- a/ml-pipeline/requirements.txt
+++ b/ml-pipeline/requirements.txt
@@ -3,6 +3,7 @@ scikit-learn==1.3.2
 requests==2.31.0
 flask==3.0.0
 flask-cors==4.0.0
+plotly==5.18.0
 reportlab==4.0.7
 seabird==0.12.0
 seaborn==0.13.0
