--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.73.0",
     "react-modal": "^3.16.1",
     "react-multi-select-component": "^4.2.9",
     "react-pdf": "^7.5.1",
