--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -21,6 +21,7 @@
     "react-pdf": "^7.5.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
+    "react-select": "5.8.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
     "recoil": "^0.3.1",
