--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -1,60 +1,40 @@
 {
-  "name": "react-cloudinterfac-app",
+  "name": "react-apiview-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev -p 5001",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@react-google-maps/api": "^2.19.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/react-datepicker": "^4.15.0",
+    "@types/d3": "^7.4.1",
     "@types/styled-components": "5.1.26",
     "axios": "^1.2.6",
-    "loader-utils": "3.2.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "d3": "^7.8.5",
+    "react": "^18",
     "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0",
-    "react-native": "^0.73.0",
-    "react-modal": "^3.16.1",
-    "react-multi-select-component": "^4.2.9",
-    "react-pdf": "^7.5.1",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
+    "react-dom": "^18",
+    "react-loader-spinner": "^5.4.5",
+    "react-router-dom": "^6.21.1",
     "react-select": "5.8.0",
-    "react-scripts": "5.0.1",
-    "react-tabs": "^6.0.2",
-    "recoil": "^0.3.1",
-    "styled-components": "^6.0.7",
-    "typescript": "4.8.3",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "PORT=5001 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "recoil": "^0.7.7",
+    "next": "14.0.4",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "sass": "^1.43.4"
   }
 }
