--- a/react-apiview-app/package.json
+++ b/react-apiview-app/package.json
@@ -12,7 +12,11 @@
     "@emotion/styled": "^11.11.0",
     "@react-google-maps/api": "^2.19.2",
     "@types/d3": "^7.4.1",
+    "@types/geojson": "^7946.0.12",
     "@types/styled-components": "5.1.26",
+    "@types/tinycolor2": "1.4.3",
+    "@types/topojson-client": "^3.1.3",
+    "@types/topojson-specification": "^1.0.4",
     "axios": "^1.2.6",
     "d3": "^7.8.5",
     "react": "^18",
@@ -22,6 +26,8 @@
     "react-router-dom": "^6.21.1",
     "react-select": "5.8.0",
     "recoil": "^0.7.7",
+    "tinycolor2": "^1.6.0",
+    "topojson-client": "^3.1.0",
     "next": "14.0.4",
     "styled-components": "^6.0.7"
   },
