add Open street maps example with Stockholm markers

--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -19,9 +19,13 @@
     "@types/topojson-specification": "^1.0.4",
     "axios": "^1.2.6",
     "d3": "^7.8.5",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.21.1",
     "react-select": "5.8.0",
