--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -21,6 +21,7 @@
     "d3": "^7.8.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-responsive-popup": "^1.0.0",
     "react": "^18",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18",
