move to postgres and add NoteRequest classes

--- a/backend/ecommerce/src/main/resources/application.properties
+++ b/backend/ecommerce/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=8099
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/ecommercedb
+spring.datasource.username=websitemaster
+spring.datasource.password=local
+spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.file=app.log
