rename ecommerce to cloudapp, as it has extended functionality

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8099
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/ecommercedb
+spring.datasource.url=jdbc:postgresql://localhost/cloudappdb
 spring.datasource.username=websitemaster
 spring.datasource.password=local
 spring.datasource.platform=postgres
