--- a/backend/cloudapp/pom.xml
+++ b/backend/cloudapp/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>ecommerce</artifactId>
+    <artifactId>cloudapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ecommerce</name>
+    <name>cloudapp</name>
 
     <properties>
         <java.version>21</java.version>
