add kafka messaging functionality to cloudapp

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/cloudappdb
 spring.datasource.username=websitemaster
 spring.datasource.password=local
-spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-logging.file=app.log
+kafka.config.producer=kafka_producer.properties
+kafka.config.consumer=kafka_consumer.properties
+kafka.topic=chat
+kafka.group.id=group-chat
+spring.data.mongodb.uri=mongodb://localhost:27017/cloudappdb
