- run mysql, postgres, mongo, zookeeper and kafka with Docker - streamline README, as Docker autoconfigures some of these services

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8099
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/cloudappdb
+spring.datasource.url=jdbc:postgresql://localhost:5433/cloudappdb
 spring.datasource.username=websitemaster
 spring.datasource.password=local
 spring.jpa.hibernate.ddl-auto=update
@@ -10,4 +10,4 @@ kafka.config.producer=kafka_producer.properties
 kafka.config.consumer=kafka_consumer.properties
 kafka.topic=chat
 kafka.group.id=group-chat
-spring.data.mongodb.uri=mongodb://localhost:27017/cloudappdb
+spring.data.mongodb.uri=mongodb://websitemaster:local@localhost:27018/cloudappdb?authSource=admin
