- add master pom for Java based services and docker image generation option for each of them - update docker-compose.yml with the new images

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 server.port=8099
+#DB - Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/cloudappdb
+spring.datasource.url=jdbc:postgresql://${DOCKER_HOST_IP:localhost}:5433/cloudappdb
 spring.datasource.username=websitemaster
 spring.datasource.password=local
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#Kafka general
 kafka.config.producer=kafka_producer.properties
 kafka.config.consumer=kafka_consumer.properties
 kafka.topic=chat
 kafka.group.id=group-chat
-spring.data.mongodb.uri=mongodb://websitemaster:local@localhost:27018/cloudappdb?authSource=admin
+spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:9092
+spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:9092
+spring.data.mongodb.uri=mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin
