--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8083
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
 # uncomment the below lines to view sql output in console
-spring.datasource.url=jdbc:mysql://localhost:3307/petstore?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/petstore?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
