--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,5 +89,14 @@ services:
       - 8099:8099
     environment:
       - DOCKER_HOST_IP=host.docker.internal
+  ml-pipeline:
+    build:
+      context: ./backend/ml-pipeline
+      dockerfile: Dockerfile
+    container_name: ml-pipeline
+    ports:
+      - 8600:8600
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
 volumes:
   petstore:
