--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -15,6 +15,7 @@
     "@react-google-maps/api": "^2.19.2",
     "@types/d3": "^7.4.1",
     "@types/geojson": "^7946.0.12",
+    "@types/leaflet": "^1.9.4",
     "@types/styled-components": "5.1.26",
     "@types/tinycolor2": "1.4.3",
     "@types/topojson-client": "^3.1.3",
@@ -35,7 +36,7 @@
     "recoil": "^0.7.7",
     "tinycolor2": "^1.6.0",
     "topojson-client": "^3.1.0",
-    "next": "14.0.4",
+    "next": "^14.2.1-canary.3",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.0.7",
