--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -16,6 +16,8 @@ services:
     container_name: petstore
     ports:
       - 8083:8083
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
   cloudapp:
     image: cloudapp:latest
     container_name: cloudapp
