--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -1,14 +1,18 @@
 user  root;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
+
+load_module /usr/lib64/nginx/modules/ngx_http_auth_jwt_module.so;
 
 events {
     worker_connections  1024;
 }
 
 http {
+    error_log /var/log/nginx/debug.log debug;
+    access_log /var/log/nginx/access.log;
+
     upstream petstore {
         server petstore:8083;
     }
@@ -30,6 +34,13 @@ http {
         }
 
         location /pet {
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
           proxy_pass http://petstore;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $http_host;
