--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -1,15 +1,19 @@
 version: "3.8"
 
 services:
-  nginx:
-    image: nginx:latest
+  nginx-jwt:
+    container_name: nginx-jwt
+#    image: nginx-jwt:latest
     ports:
       - "80:80"
-    volumes:
-      - ./frontend/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+    build:
+      context: ./frontend/nginx
+      dockerfile: Dockerfile
+#    volumes:
+#      - ./frontend/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+#      - ./frontend/nginx/localhost+3-key.pub:/etc/nginx/localhost+3-key.pub
     depends_on:
-      - petstore
-      - vehicles-api
+        - petstore
   web-proxy:
     image: web-proxy:latest
     container_name: web-proxy
@@ -36,16 +40,16 @@ services:
       - 8083:8083
     environment:
       - DOCKER_HOST_IP=host.docker.internal
-  cloudapp:
-    image: cloudapp:latest
-    container_name: cloudapp
-    build:
-      context: ./backend/cloudapp
-      dockerfile: Dockerfile
-    ports:
-      - 8099:8099
-    environment:
-      - DOCKER_HOST_IP=host.docker.internal
+#  cloudapp:
+#    image: cloudapp:latest
+#    container_name: cloudapp
+#    build:
+#      context: ./backend/cloudapp
+#      dockerfile: Dockerfile
+#    ports:
+#      - 8099:8099
+#    environment:
+#      - DOCKER_HOST_IP=host.docker.internal
   ml-pipeline:
     build:
       context: ./backend/ml-pipeline
@@ -55,12 +59,12 @@ services:
       - 8600:8600
     environment:
       - DOCKER_HOST_IP=host.docker.internal
-  next-frontend:
-    build:
-      context: ./frontend/react-apiview-app
-      dockerfile: Dockerfile
-    container_name: next-frontend
-    ports:
-      - 5001:5001
-    environment:
-      - DOCKER_HOST_IP=host.docker.internal
+#  next-frontend:
+#    build:
+#      context: ./frontend/react-apiview-app
+#      dockerfile: Dockerfile
+#    container_name: next-frontend
+#    ports:
+#      - 5001:5001
+#    environment:
+#      - DOCKER_HOST_IP=host.docker.internal
