- add main context-path api to vehicles-api, petstore and web-proxy, so nginx can reverse proxy via those main endpoints - adjust endpoint changes in react-apiview-app and nginx - clean up and lift some version's in web-proxy's pom

--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Server port is arbitrary
 server.port=8083
+server.servlet.context-path=/petstore
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
