--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -21,6 +21,10 @@ http {
         server vehicles-api:8880;
     }
 
+    upstream jiraproxy {
+        server jiraproxy:8501;
+    }
+
     server {
         listen 80;
         listen [::]:80;
@@ -33,7 +37,7 @@ http {
           try_files $uri $uri/ /index.html;
         }
 
-        location /pet {
+        location /petstore {
           auth_jwt_enabled on;
           auth_jwt_redirect on;
           auth_jwt_location HEADER=Authorization;
@@ -47,7 +51,14 @@ http {
           proxy_redirect off;
         }
 
-        location /cars {
+        location /vehicles {
+          proxy_pass http://vehicles-api;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $http_host;
+          proxy_redirect off;
+        }
+
+        location /jiraproxy {
           proxy_pass http://vehicles-api;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $http_host;
