--- a/backend/vehicles-api/src/main/resources/application.properties
+++ b/backend/vehicles-api/src/main/resources/application.properties
@@ -2,3 +2,4 @@ pricing.endpoint=http://localhost:8082
 maps.endpoint=http://localhost:9191
 spring.application.name=vehicles-api
 server.port=8880
+server.servlet.context-path=/vehicles
