- add authentication to all proxies in nginx and in frontend - add init script for postgres-ml

--- a/backend/ml-pipeline/Dockerfile
+++ b/backend/ml-pipeline/Dockerfile
@@ -2,7 +2,10 @@ FROM python:3.9-slim-buster
 
 RUN apt-get update
 
-COPY ./ /
+COPY ./requirements.txt /requirements.txt
+COPY ./config.json /config.json
+COPY ./src /src
+COPY ./customers /customers
 
 RUN pip install --upgrade pip && pip install --no-cache-dir -r ./requirements.txt
 
