--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -25,6 +25,10 @@ http {
         server jiraproxy:8501;
     }
 
+    upstream mlops-segmentation {
+        server mlops-segmentation:8600;
+    }
+
     server {
         listen 80;
         listen [::]:80;
@@ -52,6 +56,13 @@ http {
         }
 
         location /vehicles {
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
           proxy_pass http://vehicles-api;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $http_host;
@@ -59,7 +70,28 @@ http {
         }
 
         location /jiraproxy {
-          proxy_pass http://vehicles-api;
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
+          proxy_pass http://jiraproxy;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $http_host;
+          proxy_redirect off;
+        }
+
+        location /mlops-segmentation {
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
+          proxy_pass http://mlops-segmentation;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $http_host;
           proxy_redirect off;
