--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -14,6 +14,8 @@ services:
   postgres-ml:
     image: postgres:15
     restart: unless-stopped
+    volumes:
+      - "./init-ml.sql:/docker-entrypoint-initdb.d/init-ml.sql"
     environment:
       POSTGRES_USER: segmentmaster
       POSTGRES_PASSWORD: segment
