- add context path to cloudapp backend - adjust changes in frontend - add basic redirect login path to nginx - open Kafka port for both localhost and docker

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8099
+server.servlet.context-path=/cloudapp
 #DB - Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DOCKER_HOST_IP:localhost}:5433/cloudappdb
@@ -12,6 +13,6 @@ kafka.config.producer=kafka_producer.properties
 kafka.config.consumer=kafka_consumer.properties
 kafka.topic=chat
 kafka.group.id=group-chat
-spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:9092
-spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:9092
+spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
+spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
 spring.data.mongodb.uri=mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin
