--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -13,6 +13,8 @@ http {
     error_log /var/log/nginx/debug.log debug;
     access_log /var/log/nginx/access.log;
 
+    auth_jwt_loginurl "http://localhost:5001/login";
+
     upstream petstore {
         server petstore:8083;
     }
