--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -10,10 +10,15 @@ events {
 }
 
 http {
-    error_log /var/log/nginx/debug.log debug;
-    access_log /var/log/nginx/access.log;
+    # Direct logs to stdout and stderr
+    error_log /dev/stderr debug;
+    access_log /dev/stdout;
 
     auth_jwt_loginurl "http://localhost:5001/login";
+
+    upstream cloudapp {
+        server cloudapp:8099;
+    }
 
     upstream petstore {
         server petstore:8083;
@@ -41,6 +46,55 @@ http {
           root    /usr/share/nginx/html;
           index   index.html;
           try_files $uri $uri/ /index.html;
+        }
+
+        # Location for specific paths: user-register or user-login
+        location ~ ^/cloudapp/user/(user-register|user-login) {
+          proxy_pass http://cloudapp;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Location for specific paths: ws websocket
+        # do not authorize websocket with jwt
+        location ~ ^/cloudapp/ws {
+          proxy_pass http://cloudapp;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Location for general cloudapp paths excluding user-register, user-login and ws
+        # do not authorize register and login with jwt, as jwt received after login
+        location ~ ^/cloudapp/(?!.*(?:user-register|user-login|ws)) {
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
+          proxy_pass http://cloudapp;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $http_host;
+          proxy_redirect off;
+        }
+
+        location ~ (cloudapp\/(?<!(user-register/user-login))) {
+          auth_jwt_enabled on;
+          auth_jwt_redirect on;
+          auth_jwt_location HEADER=Authorization;
+          auth_jwt_algorithm RS512;
+          auth_jwt_use_keyfile on;
+          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+
+          proxy_pass http://cloudapp;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $http_host;
+          proxy_redirect off;
         }
 
         location /petstore {
