--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -15,14 +15,15 @@
     "@react-google-maps/api": "^2.19.2",
     "@types/d3": "^7.4.1",
     "@types/geojson": "^7946.0.12",
-    "@types/leaflet": "^1.9.4",
+    "@types/leaflet": "^1.9.8",
+    "@types/react-leaflet-markercluster": "^3.0.4",
     "@types/styled-components": "5.1.26",
     "@types/tinycolor2": "1.4.3",
     "@types/topojson-client": "^3.1.3",
     "@types/topojson-specification": "^1.0.4",
     "axios": "^1.2.6",
     "d3": "^7.8.5",
-    "leaflet": "^1.9.4",
+    "framer-motion": "^10.18.0",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-responsive-popup": "^1.0.0",
     "react": "^18",
@@ -30,6 +31,10 @@
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-custom-control": "^1.4.0",
+    "react-leaflet-draft": "^2.0.0",
+    "react-leaflet-draw": "^0.20.4",
+    "react-leaflet-marker": "^2.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.21.1",
     "react-select": "5.8.0",
@@ -37,6 +42,9 @@
     "tinycolor2": "^1.6.0",
     "topojson-client": "^3.1.0",
     "next": "^14.2.1-canary.3",
+    "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
+    "react-icons": "^5.0.1",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.0.7",
