- move from Html tables to DataGrid for better readability - Button based Layout and styling adjustments - invertable main logo - ml-pipeline path fix - restart: unless-stopped for all Docker services

--- a/backend/ml-pipeline/Dockerfile
+++ b/backend/ml-pipeline/Dockerfile
@@ -9,8 +9,9 @@ COPY ./customers /customers
 
 RUN pip install --upgrade pip && pip install --no-cache-dir -r ./requirements.txt
 
-CMD [ "python3", "src/init_segmentationdb.py"]
-CMD [ "python3", "src/app.py"]
+WORKDIR /src
+CMD [ "python3", "init_segmentationdb.py"]
+CMD [ "python3", "app.py"]
 
 ENV LISTEN_PORT 8600
 
