--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
     "@mui/system": "^5.12.3",
+    "@mui/x-data-grid": "^6.18.7",
     "@react-google-maps/api": "^2.19.2",
     "@types/d3": "^7.4.1",
     "@types/geojson": "^7946.0.12",
