--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -112,12 +112,13 @@ http {
         }
 
         location /vehicles {
-          auth_jwt_enabled on;
-          auth_jwt_redirect on;
-          auth_jwt_location HEADER=Authorization;
-          auth_jwt_algorithm RS512;
-          auth_jwt_use_keyfile on;
-          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+          #TODO check how info can be shared between MFEs
+          #auth_jwt_enabled on;
+          #auth_jwt_redirect on;
+          #auth_jwt_location HEADER=Authorization;
+          #auth_jwt_algorithm RS512;
+          #auth_jwt_use_keyfile on;
+          #auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
           proxy_pass http://vehicles-api;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
