--- a/frontend/react-apiview-app/package.json
+++ b/frontend/react-apiview-app/package.json
@@ -3,64 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "rm -rf .next; NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 5001",
+    "build": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next build",
+    "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5001",
+    "format": "prettier --write .",
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.12.3",
-    "@mui/system": "^5.12.3",
+    "@module-federation/nextjs-mf": "^8.3.16",
+    "@module-federation/enhanced": "^0.1.15",
+    "@module-federation/runtime": "0.1.15",
+    "@mui/material": "^5.15.5",
     "@mui/x-data-grid": "^6.18.7",
-    "@react-google-maps/api": "^2.19.2",
-    "@types/d3": "^7.4.1",
-    "@types/geojson": "^7946.0.12",
-    "@types/leaflet": "^1.9.8",
-    "@types/react-leaflet-markercluster": "^3.0.4",
-    "@types/styled-components": "5.1.26",
-    "@types/tinycolor2": "1.4.3",
-    "@types/topojson-client": "^3.1.3",
-    "@types/topojson-specification": "^1.0.4",
     "axios": "^1.2.6",
     "d3": "^7.8.5",
     "framer-motion": "^10.18.0",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet-responsive-popup": "^1.0.0",
-    "react": "^18",
-    "react-datepicker": "^4.16.0",
-    "react-dom": "^18",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^2.1.0",
-    "react-leaflet-custom-control": "^1.4.0",
-    "react-leaflet-draft": "^2.0.0",
-    "react-leaflet-draw": "^0.20.4",
-    "react-leaflet-marker": "^2.1.0",
-    "react-loader-spinner": "^5.4.5",
-    "react-router-dom": "^6.21.1",
-    "react-select": "5.8.0",
-    "recoil": "^0.7.7",
-    "tinycolor2": "^1.6.0",
-    "topojson-client": "^3.1.0",
     "next": "^14.2.1-canary.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "prettier": "^3.2.2",
+    "react": "^18",
+    "react-datepicker": "^4.16.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "sockjs": "^0.3.24",
+    "react-loader-spinner": "^5.4.5",
+    "react-select": "5.8.0",
     "sockjs-client": "^1.6.1",
-    "styled-components": "^6.0.7",
-    "webstomp-client": "^1.2.6"
+    "webstomp-client": "^1.2.6",
+    "webpack": "5.91.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.47",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "sass": "^1.43.4"
+    "cypress": "^13.6.3",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "tailwindcss": "latest",
+    "typescript": "^5.3.3"
   }
 }
