- centralize Frontend Docker files to Dockerfile_FE - add ModuleTemplate example for module federation baseline reference - rename CloudApp to CloudApp-Shell as it will be a full App-Shell setup - update READMEs with changes

--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -2,12 +2,13 @@ FROM node:18-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
+ARG SERVICE_PATH
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY ./package.json ./
+COPY ./$SERVICE_PATH/package.json ./
 RUN \
   if [ -f package.json ]; then npm install; \
   else echo "Lockfile not found." && exit 1; \
@@ -16,9 +17,10 @@ RUN \
 
 # Rebuild the source code only when needed
 FROM base AS builder
+ARG SERVICE_PATH
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY . .
+COPY ./$SERVICE_PATH/. .
 
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
@@ -32,6 +34,8 @@ RUN \
 
 # Production image, copy all the files and run next
 FROM base AS runner
+ARG SERVICE_PORT
+
 WORKDIR /app
 
 ENV NODE_ENV production
@@ -54,9 +58,9 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-EXPOSE 5002
+EXPOSE $SERVICE_PORT
 
-ENV PORT 5002
+ENV PORT $SERVICE_PORT
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
